--- a/src/Styles/SingleFilm.css
+++ b/src/Styles/SingleFilm.css
@@ -1,8 +1,9 @@
 .singleFilm {
   border: none;
   border-radius: 5px;
-  padding: 30px;
+  padding: 0px 30px 0px 30px;
   width: 450px;
+  height: 650px;
   background-color: lightgrey;
   margin: 20px;
   display: flex;
