--- a/src/Styles/MoviesLibrary.css
+++ b/src/Styles/MoviesLibrary.css
@@ -1,9 +1,9 @@
 .movieslibrary {
   width: 100vw;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
   margin: 50px;
 }
