--- a/src/Styles/SingleFilm.css
+++ b/src/Styles/SingleFilm.css
@@ -1,3 +1,57 @@
+.nav-container {
+  margin: 40px;
+  justify-content: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
+  width: 500px;
+  background-color: #f1efef;
+  box-shadow: 0px 0px 5px 2px #8f8f8f;
+  border-radius: 5px;
+}
+.nav-container > button {
+  width: 150px;
+  height: 50px;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px 2px #8f8f8f;
+  font-size: medium;
+  font-weight: 600;
+  background-color: aquamarine;
+  cursor: pointer;
+  display: block;
+  margin: 40px auto 0 auto;
+}
+
+.nav-container > form {
+  margin: 0px auto 20px auto;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: x-large;
+  font-weight: 600;
+  letter-spacing: 4px;
+  width: 400px;
+}
+form > * {
+  display: block;
+}
+form > input {
+  width: 250px;
+  height: 60px;
+  margin-top: 5px;
+  text-align: center;
+  border: 2px solid aquamarine;
+  border-radius: 5px;
+  background-color: aquamarine;
+  font-weight: 700;
+  font-size: large;
+  outline: none;
+  box-shadow: 0px 0px 5px 2px #8f8f8f;
+}
 .singleFilm {
   border: none;
   border-radius: 5px;
