--- a/src/Styles/SingleFilm.css
+++ b/src/Styles/SingleFilm.css
@@ -5,12 +5,15 @@
   justify-content: center;
   align-items: center;
   padding: 40px;
-  width: 500px;
+  max-width: 500px;
   background-color: #f1efef;
   box-shadow: 0px 0px 5px 2px #8f8f8f;
   border-radius: 5px;
 }
-.nav-container > button {
+.buttons {
+  display: flex;
+}
+.buttons > button {
   width: 150px;
   height: 50px;
   border: none;
@@ -31,7 +34,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-size: x-large;
+  font-size: xx-large;
   font-weight: 600;
   letter-spacing: 4px;
   width: 400px;
