--- a/src/Styles/moviesList.css
+++ b/src/Styles/moviesList.css
@@ -1,8 +1,9 @@
 .moviesList {
   width: 100vw;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   flex-direction: row;
   flex-wrap: wrap;
+  margin: 0;
 }
